--- a/config/env.example
+++ b/config/env.example
@@ -1,4 +1,178 @@
+# IGN Scripts Environment Configuration Template
+# Phase 14: MPC Framework & Production Control 🎛️
+# Following crawl_mcp.py methodology for environment validation
+# Copy this file to .env and customize with your specific values
+# NEVER commit .env files to version control - they contain sensitive information
+
+# ================================
+# Neo4j Graph Database Configuration (REQUIRED)
+# ================================
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=ignition-graph
+NEO4J_DATABASE=neo4j
+NEO4J_URL=bolt://host.docker.internal:7687
+
+# Enable knowledge graph functionality
+USE_KNOWLEDGE_GRAPH=true
+
+# ================================
+# MPC Framework Configuration - Phase 14.1
+# ================================
+# MPC Controller Settings
+MPC_SOLVER_TIMEOUT=30.0
+MPC_MAX_ITERATIONS=100
+MPC_CONVERGENCE_TOLERANCE=1e-6
+MPC_TEMP_DIR=/tmp/mpc_framework
+
+# MPC Optimization Settings
+MPC_PREDICTION_HORIZON=20
+MPC_CONTROL_HORIZON=5
+MPC_SAMPLE_TIME=1.0
+MPC_OPTIMIZATION_METHOD=SLSQP
+
+# ================================
+# Safety System Configuration - CRITICAL
+# ================================
+# Emergency Response Settings
+SAFETY_EMERGENCY_TIMEOUT=5.0
+SAFETY_WATCHDOG_INTERVAL=1.0
+SAFETY_BACKUP_SYSTEMS=plc,safety_relay,manual_override
+SAFETY_NOTIFICATION_ENDPOINTS=safety@company.com,operator@company.com,emergency@company.com
+
+# Safety Hardware Configuration
+EMERGENCY_STOP_GPIO_PIN=18
+SAFETY_DATABASE_URL=postgresql://user:pass@localhost/safety_db
+SAFETY_BACKUP_CHANNELS=ethernet,serial,radio
+
+# Safety Integrity Levels
+SAFETY_DEFAULT_SIL_LEVEL=SIL_2
+SAFETY_CRITICAL_TIMEOUT=2.0
+SAFETY_FAIL_SAFE_MODE=true
+
+# ================================
+# Alarm Management System
+# ================================
+ALARM_DATABASE_URL=postgresql://user:pass@localhost/alarms
+ALARM_NOTIFICATION_ENDPOINTS=alarm@company.com,sms:+1234567890,teams:webhook_url
+ALARM_ESCALATION_TIMEOUT=300
+ALARM_MAX_ACTIVE_ALARMS=1000
+ALARM_PRIORITY_LEVELS=LOW,MEDIUM,HIGH,CRITICAL,EMERGENCY
+
+# ================================
+# Performance Monitoring
+# ================================
+PERFORMANCE_DATA_RETENTION_DAYS=30
+PERFORMANCE_ANALYTICS_INTERVAL=60
+PERFORMANCE_KPI_CALCULATION_WINDOW=3600
+PERFORMANCE_ALERT_THRESHOLDS=efficiency:0.8,availability:0.95
+
+# ================================
+# Production Scheduler
+# ================================
+SCHEDULER_UPDATE_INTERVAL=300
+SCHEDULER_MAX_CONCURRENT_TASKS=10
+SCHEDULER_TASK_TIMEOUT=3600
+SCHEDULER_BACKUP_INTERVAL=1800
+
+# ================================
+# OPC-UA Configuration
+# ================================
+OPCUA_SERVER_URL=opc.tcp://localhost:4840
+OPCUA_USERNAME=admin
+OPCUA_PASSWORD=your_password
+OPCUA_APPLICATION_NAME=IGN-Scripts
+OPCUA_APPLICATION_URI=urn:IGN-Scripts:Client
+OPCUA_ORGANIZATION_NAME=IGN-Scripts
+OPCUA_ORGANIZATION_URI=urn:IGN-Scripts
+
+# OPC-UA Security Configuration
+OPCUA_SECURITY_POLICY=Basic256Sha256
+OPCUA_SECURITY_MODE=SignAndEncrypt
+OPCUA_CERTIFICATE_PATH=~/.ignition/opcua/certificates/client-certificate.der
+OPCUA_PRIVATE_KEY_PATH=~/.ignition/opcua/certificates/client-private-key.pem
+OPCUA_TRUST_STORE_PATH=~/.ignition/opcua/certificates/trusted
+OPCUA_REJECT_STORE_PATH=~/.ignition/opcua/certificates/rejected
+
+# OPC-UA Connection Options
+OPCUA_SESSION_TIMEOUT=60000
+OPCUA_SECURE_CHANNEL_TIMEOUT=60000
+OPCUA_REQUEST_TIMEOUT=10000
+OPCUA_KEEPALIVE_INTERVAL=30000
+
+# ================================
+# MCP Configuration
+# ================================
+MCP_API_URL=http://localhost:8080
+MCP_API_KEY=your_mcp_api_key
+MCP_ADMIN_USER=admin
+MCP_ADMIN_PASSWORD=your_mcp_admin_password
+
+# MCP Tools API Configuration
+MCP_TOOLS_API_URL=http://localhost:8082
+MCP_TOOLS_API_KEY=your_mcp_tools_api_key
+
+# MCP Logging Configuration
+MCP_LOG_LEVEL=INFO
+MCP_TOOLS_LOG_LEVEL=INFO
+
+# ================================
+# Ignition Gateway Configuration
+# ================================
+IGN_GATEWAYS=local_dev,staging,production
+
+# Local Development Gateway
+IGN_LOCAL_DEV_HOST=localhost
+IGN_LOCAL_DEV_PORT=8088
+IGN_LOCAL_DEV_HTTPS=false
+IGN_LOCAL_DEV_USERNAME=admin
+IGN_LOCAL_DEV_PASSWORD=password
+IGN_LOCAL_DEV_VERIFY_SSL=false
+
+# Staging Gateway
+IGN_STAGING_HOST=staging.ignition.local
+IGN_STAGING_PORT=8043
+IGN_STAGING_HTTPS=true
+IGN_STAGING_USERNAME=admin
+IGN_STAGING_PASSWORD=staging_password
+IGN_STAGING_VERIFY_SSL=true
+
+# Production Gateway
+IGN_PRODUCTION_HOST=production.ignition.local
+IGN_PRODUCTION_PORT=8043
+IGN_PRODUCTION_HTTPS=true
+IGN_PRODUCTION_USERNAME=admin
+IGN_PRODUCTION_PASSWORD=production_password
+IGN_PRODUCTION_VERIFY_SSL=true
+
+# ================================
+# Application Configuration
+# ================================
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FILE_PATH=logs/ignition_scripts.log
+LOG_MAX_SIZE=10MB
+LOG_BACKUP_COUNT=5
+
+# UI Configuration
+UI_PORT=8501
+UI_HOST=localhost
+UI_DEBUG=false
+
+# Development Settings
+DEVELOPMENT_MODE=true
+ENABLE_DEBUG_LOGGING=false
+IGNITION_DEV_MODE=true
+IGNITION_DEBUG_LOGGING=true
+
+# ================================
+# GitHub MCP Configuration
+# ================================
+GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token_here
+
+# ================================
 # Database Configuration
+# ================================
 DATABASE_URL=postgresql://username:password@localhost:5432/ign_scripts
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
@@ -6,28 +180,42 @@ DATABASE_NAME=ign_scripts
 DATABASE_USER=username
 DATABASE_PASSWORD=password
 
-# Application Configuration
-APP_ENV=development
-LOG_LEVEL=INFO
-DEBUG=True
-
-# API Configuration
-API_BASE_URL=https://api.example.com
-API_KEY=your_api_key_here
-API_TIMEOUT=30
-
-# Security
+# ================================
+# Security Configuration
+# ================================
 SECRET_KEY=your_secret_key_here
 JWT_SECRET=your_jwt_secret_here
 
-# Redis (if using for caching)
+# ================================
+# Redis Configuration
+# ================================
 REDIS_URL=redis://localhost:6379/0
 
-# File Storage
+# ================================
+# File Storage Configuration
+# ================================
 DATA_DIR=./data
 OUTPUT_DIR=./output
 TEMP_DIR=./temp
 
+# ================================
 # External Services
+# ================================
 EXTERNAL_API_URL=https://external-service.com/api
-EXTERNAL_API_KEY=your_external_api_key 
+EXTERNAL_API_KEY=your_external_api_key
+
+# ================================
+# RAG and AI Configuration
+# ================================
+USE_AGENTIC_RAG=false
+USE_HYBRID_SEARCH=false
+USE_RERANKING=false
+
+# ================================
+# IMPORTANT SECURITY NOTES
+# ================================
+# - NEVER commit this file to version control with real credentials
+# - Use strong passwords and API keys in production
+# - Regularly rotate credentials and API keys
+# - Enable SSL/TLS for all production connections
+# - Configure proper firewall rules for database and service access
