--- a/requirements.txt
+++ b/requirements.txt
@@ -108,3 +108,6 @@ gitpython>=3.1.0  # Alternative to subprocess git calls
 # Phase 10: Enterprise Integration & Deployment - API Testing and Documentation
 fastapi>=0.104.0
 uvicorn>=0.24.0
+
+# Phase 14: MPC Framework & Production Control - Safety System Dependencies
+watchdog>=6.0.0  # File system monitoring for safety watchdog functionality
